syntax = "proto3";

option go_package = "github.com/sjxiang/oms/pb";

package pb;

import "google/protobuf/empty.proto";

message Order {
    string ID = 1;
    string CustomerID = 2;
    string Status = 3;
    repeated Item Items = 4;
    string PaymentLink = 5;
}


// 订单服务
service OrderService {
    rpc CreateOrder (CreateOrderRequest) returns (google.protobuf.Empty);
    rpc GetOrder (GetOrderRequest) returns (Order);
    rpc UpdateOrder (Order) returns (google.protobuf.Empty);
}

message CreateOrderRequest {
    string CustomerID = 1;
    repeated ItemWithQuantity Items = 2;
}

message GetOrderRequest {
    string OrderID = 1;
    string CustomerID = 2;
}



message ItemWithQuantity {
    string ID = 1;
    int32 Quantity = 2;  // 数量
}

message Item {
    string ID = 1;
    string Name = 2;
    int32 Quantity = 3;
    string PriceID = 4;
}


// 库存服务
service StockService {
    rpc CheckIfItemsInStock (CheckIfItemsInStockRequest) returns (CheckIfItemsInStockResponse);
    rpc GetItems (GetItemsRequest) returns (GetItemsResponse);
}

message CheckIfItemsInStockRequest {
    repeated ItemWithQuantity Items = 1;
}

message CheckIfItemsInStockResponse {
    bool InStock = 1;
    repeated Item Items = 2;
}

message GetItemsRequest {
    repeated string ItemIDs = 1;
}

message GetItemsResponse{
    repeated Item Items = 1;
}
  